--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             font-size: 2.5rem;
         }
 
-        /* Add styles for the round profile picture */
+        /*Snapchat-1110100913.jpg */
         .profile-picture {
             width: 100px; /* Adjust the size as needed */
             height: 100px;
@@ -94,10 +94,10 @@
 <body>
     <header>
         <div class="header-content">
-            <!-- Add your profile picture here -->
+            <!--Snapchat-1110100913.jpg-->
            
-            <h1>SIVASANKARI</h1>
-            <p>Am ASSISTANT PROFESSOR DEPARTMENT OF COMPUTER SCIENCE</p>
+            <h1>MANISHA THAMIZHMANI</h1>
+            <p>Am A BACHELOR OF COMPUTER APPLICATION STUDENT </p>
         </div>
     </header>
 
@@ -170,7 +170,7 @@
     </section>
 
     <footer>
-        <p>&copy; sivasankari </p>
+        <p>&copy; MANISHA</p>
     </footer>
 
     <script>
